<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aplicacion Book It</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_central">Central</string>
    <string name="title_activity_crear_marker">CrearMarker</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_registro">Registro</string>

    <!-- Menu -->
    <string name="search_title">Buscar Aca</string>
    <string name="drawer_icon">Drawer</string>
    <string name="sort_icon">Filtrar</string>

    <!-- Login -->

    <string name="Login_Usuario">Usuario UC</string>
    <string name="Login_Entrar">Entrar</string>
    <string name="Login_Registrarse">Registrarme</string>

    <!-- Registro -->
    <string name="Registro_Titulo_Registro">Registro!!!</string>
    <string name="Registro_Nombre">Nombre Completo</string>
    <string name="Registro_CorreoUC">Correo UC</string>
    <string name="Registro_Password">Contraseña</string>
    <string name="Registro_ConfirmPassword">Confirmar Contraseña</string>
    <string name="Registro_Aceptar">Aceptar</string>

    <!-- NombreMetodos -->
    <string name="Metodo_Registro">Registrarme</string>
    <string name="Metodo_Login">Login</string>
    <string name="Metodo_LimpiarCasilla">LimpiarCasilla</string>
    <string name="Metodo_AceptarRegistro">Aceptar</string>

    <!-- Marker Options -->

    <string name="MarkerOptions_Ramo">Buscar Ramo</string>
    <string name="MarkerOptions_Ayuadntias">Ayudantía</string>
    <string name="MarkerOptions_Clase">Ramo</string>
    <string name="MarkerOptions_Dudas">Duda de Ejercicio</string>
    <string name="MarkerOptions_Descripcion">Escriba una descripción</string>

    <!-- Mapa -->

    <string name="SignoMas">+</string>

    <!-- Colores -->
    <!-- #CCCCCCC era e lfondo de antes -->
    <color name="Fondo">#FFFFFF</color>
    <color name="ColorNaranjo">#FF7300</color>
    <color name="Blancoo">#FFFFFF</color>

    <string name="title_activity_enviar_mensaje">EnviarMensaje</string>

</resources>
