<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <TextView
        android:id="@+id/Registro_TituloRegistro"
        android:text="@string/Registro_Titulo_Registro"
        android:textSize="30sp"
        
        android:layout_width="@dimen/Rect_Ancho"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/Rect_MargenIzq"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginTop="30dp" />
    
     <TextView
        android:id="@+id/Registro_TextoNombre"
        android:text="@string/Registro_Nombre"
        android:textSize="15sp"
        
        android:layout_width="@dimen/Rect_Ancho"
        android:layout_height="@dimen/Rect_Alto"
        android:layout_marginLeft="@dimen/Rect_MargenIzq"
        android:layout_marginTop="30dp" />
	<EditText
        android:id="@+id/Registro_Nombre"
        android:text="@string/Registro_Nombre"
        android:inputType="textPersonName"
        android:onClick="@string/Metodo_LimpiarCasilla"  
        
        android:layout_width="@dimen/Rect_Ancho"
        android:layout_height="@dimen/Rect_Alto"
        android:layout_marginLeft="@dimen/Rect_MargenIzq"
        android:gravity="center_horizontal|center_vertical"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="0dp"/>
    
	<TextView
        android:id="@+id/Registro_TextoCorreoUc"
        android:text="@string/Registro_CorreoUC"
        android:textSize="15sp"
        
        android:layout_width="@dimen/Rect_Ancho"
        android:layout_height="@dimen/Rect_Alto"
        android:layout_marginLeft="@dimen/Rect_MargenIzq"
        android:layout_marginTop="15dp" />
    <EditText
        android:id="@+id/Registro_CorreoUC"
        android:text="@string/Registro_CorreoUC"
        android:inputType="textEmailAddress"
        android:onClick="@string/Metodo_LimpiarCasilla"
        
        android:layout_width="@dimen/Rect_Ancho"
        android:layout_height="@dimen/Rect_Alto"
        android:layout_marginLeft="@dimen/Rect_MargenIzq"
        android:gravity="center_horizontal|center_vertical"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="0dp"  >
    </EditText>

    <TextView
        android:id="@+id/Registro_TextoIngresarContrasena"
        android:text="@string/Registro_Password"
        android:textSize="15sp"
        
        android:layout_width="@dimen/Rect_Ancho"
        android:layout_height="@dimen/Rect_Alto"
        android:layout_marginLeft="@dimen/Rect_MargenIzq"
        android:layout_marginTop="15dp" />
    <EditText
        android:id="@+id/Registro_Pass"
        android:text="@string/Registro_Password"
        android:inputType="textPassword"
        android:onClick="@string/Metodo_LimpiarCasilla" 
        
        android:layout_width="@dimen/Rect_Ancho"
        android:layout_height="@dimen/Rect_Alto"
        android:layout_marginLeft="@dimen/Rect_MargenIzq"
        android:gravity="center_horizontal|center_vertical"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="0dp" />

     <TextView
        android:id="@+id/Registro_TextoConfirmarContrasena"
        android:text="@string/Registro_ConfirmPassword"
        android:textSize="15sp"
        
        android:layout_width="@dimen/Rect_Ancho"
        android:layout_height="@dimen/Rect_Alto"
        android:layout_marginLeft="@dimen/Rect_MargenIzq"
        android:layout_marginTop="15dp" />
    <EditText
        android:id="@+id/Registro_ConfirmVisit"
        android:text="@string/Registro_ConfirmPassword"
        android:inputType="textPassword" 
        android:onClick="@string/Metodo_LimpiarCasilla"
        
        android:layout_width="@dimen/Rect_Ancho"
        android:layout_height="@dimen/Rect_Alto"
        android:layout_marginLeft="@dimen/Rect_MargenIzq"
        android:gravity="center_horizontal|center_vertical"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="0dp" />

    <Button
        android:id="@+id/Registro_Aceptar"
        android:text="@string/Registro_Aceptar"
        android:onClick="@string/Metodo_AceptarRegistro"
        
        android:layout_width="@dimen/Rect_Ancho"
        android:layout_height="@dimen/Rect_Alto"
        android:layout_marginLeft="@dimen/Rect_MargenIzq"
        android:gravity="center_horizontal|center_vertical"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="40dp" />

</LinearLayout>